--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,9 @@ unbind C-b
 set -g prefix `
 bind-key ` send-prefix
 
+# fix wait time for escape (helps with tmux and vim)
+set -s escape-time 0
+
 ## use VI
 set-window-option -g mode-keys vi
 
@@ -27,7 +30,7 @@ set -g mouse-select-window on
 set -g mouse-resize-pane on
 set -g mode-mouse on
 
-# Better navigation betwwen panes
+## Better navigation betwwen panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
