--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,10 +25,8 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Mouse integration
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mouse-resize-pane on
-set -g mode-mouse on
+set-option -g -q mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
 ## Better navigation betwwen panes
 bind h select-pane -L
