Migrate tmux conf to 2.9

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,10 +50,9 @@ set -g status-bg black
 set -g status-fg white
 set -g status-interval 1
 
-set -g status-right '#[fg=colour238]%Y-%m-%d %H:%M#[default] '
+set -g status-right "#[fg=colour238]%Y-%m-%d %H:%M#[default] "
 
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-style "bg=green fg=black"
 
 ## Focus events
 # needed as on tmux 1.9 and up (defaults to off)
