--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,10 +29,10 @@ set-option -g -q mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
 ## Better navigation betwwen panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 ## Join windows: <prefix> S, <prefix> J
 bind-key J choose-window "join-pane -v -s "%%""
@@ -41,8 +41,8 @@ bind-key S choose-window "join-pane -t '%%'"
 
 ## Open new windows and panes in the same directory
 # bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
 
 ## UI
 set -g automatic-rename on
@@ -58,3 +58,6 @@ set-window-option -g window-status-current-style "bg=green fg=black"
 # needed as on tmux 1.9 and up (defaults to off)
 # added in tmux commit c7a121cfc0137c907b7bfb
 set -g focus-events on
+
+# Reload configuration
+bind-key R source-file ~/.tmux.conf \; display "Reloaded tmux configuration!"
