--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,9 @@
 ## Better colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:Tc"
 
 ## Fix the clipboard access (`brew install reattach-to-user-namespace`)
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 ## Change prefix
 unbind C-b
@@ -25,7 +26,7 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 ## Mouse integration
-set-option -g -q mouse on
+set -g -q mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
 ## Better navigation betwwen panes
@@ -46,12 +47,10 @@ bind-key % split-window -h -c "#{pane_current_path}"
 
 ## UI
 set -g automatic-rename on
-set -g status-bg black
-set -g status-fg white
 set -g status-interval 1
 
-set -g status-right "#[fg=colour238]%Y-%m-%d %H:%M#[default] "
-
+set -g status-style "bg=default,fg=white"
+set -g status-right "#[fg=colour240]%Y-%m-%d %H:%M#[default] "
 set-window-option -g window-status-current-style "bg=green fg=black"
 
 ## Focus events
