Tmux shortcut to switch to previous pane layout

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,7 @@ bind-key S choose-window "join-pane -t '%%'"
 # bind c new-window -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
+bind-key BSpace select-layout -o
 
 ## UI
 set -g automatic-rename on
